--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('/imagenes/home.jpg') no-repeat;
+    background: url('imagenes/home.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
